<resources>
    <string name="app_name">Attitude</string>
    <string name="ok_button">ok</string>
    <string name="wifi_auto_connect_error_title">wifi auto-connect failure</string>
    <string name="wifi_auto_connect_failure_description_connection_result_false">connection result = false\n\nis wifi enabled?</string>
    <string name="wifi_auto_connect_success">wifi auto-connect success!</string>
    <string name="error_message_title_generic">Error!</string>
    <string name="unexpected_error_message">Encountered an unexpected error.</string>
    <string name="zero_configured_wifi_networks_enable_location_error_message">WifiManager.getConfiguredNetworks() returned 0 elements. Did you make sure to enable location in Android settings?</string>
    <string name="failed_to_find_target_wifi_error_message">couldn\'t find target wifi network in configured networks</string>
    <string name="location_permission_rationale_title">Location permission</string>
    <string name="location_permission_rationale_message">The location permission is required to retrieve and connect to saved wifi networks.\n\nYour geographical location is never derived.</string>
    <string name="open_settings_button">open settings</string>
    <string name="cancel_button">cancel</string>
    <string name="not_now_button">not now</string>
    <string name="background_location_permission_rationale_message">In order to automatically connect to wifi from the background (on boot, on wake, etc.) you need to set location access to \"Allow all the time\".\n\nYour geographical location is never derived.</string>
    <string name="background_location_permission_rationale_title">Background location permission</string>
    <string name="service_connection_bound_status">bound</string>
    <string name="service_connection_not_bound_status">dead</string>
    <string name="console_ban_warning_title">CONSOLE BAN WARNING</string>
    <string name="adb_ban_warning_message">Having ADB enabled while connected to the Internet without an active Meta Developer account MAY RESULT IN ADB CEASING TO FUNCTION.\nThis persists EVEN AFTER A FACTORY RESET until you connect to the Internet and log in with a Meta Developer account.\n\nOr so I\'ve heard. Proceed at your own risk.</string>
    <string name="got_it_button">got it</string>
    <string name="grant_secure_settings_tool_name">allow wireless debugging auto-start</string>
    <string name="grant_secure_settings_tool_message">grants Attitude the WRITE_SECURE_SETTINGS permission, allowing it to enable wireless debugging as needed.\n\nalso sets adb pairing connections to never expire, so you don\'t have to pair wireless debugging again.</string>
    <string name="do_it_button">do it</string>
    <string name="remove_bloatware_icons_tool_name">remove un-removable taskbar icons</string>
    <string name="crash_everything_tool_name">crash everything</string>
    <string name="noclip_tool_name">crash vr guardian / boundary service</string>
    <string name="remove_bloatware_icons_tool_message">To remove the icons:\n - use \"disable apps\"\n - reboot or use the \"crash everything\" tool\n - add apps of your choosing into the now empty space\n - optionally, use \"enable apps\" if you still want to launch those apps elsewhere (you may have to reboot again after this)\n\nNote: after re-enabling the apps and rebooting again, any unused space on the taskbar will be re-populated with the bloatware app icons.</string>
    <string name="disable_apps_button">disable apps</string>
    <string name="re_enable_apps_button">re-enable apps</string>
    <string name="crash_everything_tool_message">crashes vrshell and systemux to be restarted. this takes the entire ui and all open apps with it.\n\nuseful as a very fast soft reboot for the UI, but not as useful as an actual reboot.</string>
    <string name="noclip_tool_message">Disables the blue wall that marks the size of your play space, also called the \"Boundary\". Useful for testing and debugging.\n\nWARNING: This will allow you to walk into walls without warning, which can be very painful.</string>
    <string name="keystore_init_failure_title">Keystore initialization failed</string>
    <string name="enable_developer_options_title">Enable developer options</string>
    <string name="enable_developer_options_message"><![CDATA[Before pairing, you need to enable development settings:\n - go to: Android Settings > (scroll down) > About headset > (scroll down)\n - tap \"Build number\" repeatedly at least 7 times until development settings gets enabled\n - you may have to enter your pin, it\'s the same one you use on the lock screen\n\nAfter doing this, try starting pairing again.\n\nIf you have another way of pairing, select \"ignore\" to skip this check.]]></string>
    <string name="close_button">close</string>
    <string name="skip_developer_options_check_button">ignore</string>
    <string name="pairing_failed_title">pairing failed</string>
    <string name="pairing_successful_title">pairing successful</string>
    <string name="adb_service_foreground_notification_channel_name">ADB Service Foreground</string>
    <string name="adb_service_foreground_notification_title">ADB Service</string>
    <string name="adb_service_foreground_notification_sub_text">service is running</string>
    <string name="preference_not_set_summary">not set</string>
    <string name="wifi_list_error_title">failed to get wifi list</string>
    <string name="notification_action_error_title">notification action failed</string>
    <string name="start_pairing_button">start pairing</string>
    <string name="adb_tools_header_title">tools (shows info before applying)</string>
    <string name="wifi_connect_button">wifi connect</string>
    <string name="notification_panel_button">notification panel</string>
    <string name="app_settings_button">app settings</string>
    <string name="adb_setup_button">adb (beta)</string>
    <string name="android_settings_button">android settings</string>
    <string name="accessibility_settings_button">accessibility settings</string>
    <string name="notification_listener_settings_button">notification listener settings</string>
    <string name="notifications_title">notifications</string>
    <string name="app_settings_title">settings</string>
    <string name="adb_pairing_dialog_title">Pairing</string>
    <string name="adb_pairing_instructions"><![CDATA[To start pairing, go to: Developer options > Wireless debugging > Pair device with pairing code]]></string>
    <string name="adb_pairing_session_discovery_text">waiting for pairing to start</string>
    <string name="notification_action_input_hint_placeholder">action input</string>
    <string name="submit_button">submit</string>
    <string name="adb_pairing_enter_pairing_code_instruction">Enter the pairing code below</string>
    <string name="adb_pairing_code_hint">pairing code</string>
    <string name="accessibility_service_description">Used for features like pop-up blocking and input re-mapping. You can use Attitude without this permission, but features that require it won\'t work.</string>
    <string name="notification_listener_service_description">Used for the improved notificiation drawer. You can use Attitude without this permission, but the improved notification drawer won\'t display your notifications.</string>
    <string name="wifi_auto_connect_settings_header">Wifi auto-connect</string>
    <string name="connect_to_wifi_on_boot">Connect to wifi on boot</string>
    <string name="connect_to_wifi_when_waking_from_sleep">Connect to wifi when waking from sleep</string>
    <string name="select_wifi_network">Select wifi network</string>
    <string name="pop_up_blocking_settings_header">Pop-up blocking</string>
    <string name="block_horizon_feed">Block \"Horizon Feed\"</string>
    <string name="block_passthrough">Block \"Passthrough\" virtual item suggestion</string>
    <string name="ui_remapping_settings_header">UI remapping</string>
    <string name="enable_remapping">Enable remapping</string>
    <string name="remap_library">Remap app drawer</string>
    <string name="remap_library_long_press">Remap app drawer long press</string>
    <string name="remap_native_notification_window">Remap native notification window</string>
    <string name="remap_profile_button">Remap profile button</string>
    <string name="notification_drawer_settings_header">Notification drawer</string>
    <string name="hide_foreground_meta_notifications">Hide foreground system notifications</string>
    <string name="hide_foreground_meta_notifications_summary">These are normally hidden in the system notification panel</string>
    <string name="hide_notification_group_summaries">Hide notification group summaries</string>
    <string name="hide_notification_group_summaries_summary">Turn this off if some notifications are missing</string>
</resources>