<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- hard-coded text on this page will most likely be replaced in the near future -->
    <!-- most of it also annotates non-translatable debugging information -->

    <!-- debug info, not worth translating -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AdbService status"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.Material3.ActionBar.Subtitle"
        tools:ignore="HardcodedText" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow>

            <!-- debug info, not worth translating -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connection service binding"
                android:layout_marginHorizontal="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/adb_service_binding_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="bound"
                tools:textColor="#ff00ff00"
                />

        </TableRow>

        <TableRow>

            <!-- debug info, not worth translating -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current status"
                android:layout_marginHorizontal="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/adb_service_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="CONNECTED"
                tools:textColor="#ff00ff00"
                />

        </TableRow>

        <TableRow>

            <!-- debug info, not worth translating -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Most recent connection error"
                android:layout_marginHorizontal="8dp"
                tools:ignore="HardcodedText" />

            <!-- debug info, not worth translating -->
            <Button
                android:id="@+id/adb_service_error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="view"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/adb_service_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="InterruptedException"
                android:layout_marginHorizontal="8dp"
                />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/adb_operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/pair_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_pairing_button"
                />

            <!-- debug info, not worth translating -->
            <Button
                android:id="@+id/test_command_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="run test command"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adb_tools_header_title"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            />

        <Button
            android:id="@+id/grant_secure_settings_tool_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grant_secure_settings_tool_name"
            />

        <Button
            android:id="@+id/remove_bloatware_icons_tool_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_bloatware_icons_tool_name"
            />

        <Button
            android:id="@+id/crash_everything_tool_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crash_everything_tool_name"
            />

        <Button
            android:id="@+id/noclip_tool_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noclip_tool_name"
            />


    </LinearLayout>

    <!-- debug info, not worth translating -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="pairing/tools logs (not AdbService logs)"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.Material3.ActionBar.Subtitle"
        tools:ignore="HardcodedText" />

    <ScrollView
        android:id="@+id/adb_log_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/adb_log_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="initializing adb"
            />

    </ScrollView>
</LinearLayout>